assets/css/style.css
/* navigation list positioning */

nav {
    display: flex;
    justify-content: flex-end;
    align-items: center;
    padding: 0;
    margin-bottom: 1%;
    font-size: 120%;
    letter-spacing: 4px;
}

nav li {
    list-style: none;
    display: inline-block;
    margin-right: 30px;
    margin-top: -30px;
}

/* menu styling */

#menu a {
    text-decoration: none;
    color: green;
    font-size: larger;
}

#menu a:hover {
    text-decoration-line: underline;
    text-decoration-thickness: 3px;
    font-weight: bold;
}

.active {
    border-bottom: solid 1px;
}


/*    Container enquiry link */

#enquiries_link {
    text-decoration-line: underline;
    text-decoration-thickness: 1px;
    color:white;
}

/*    Header and Logo positioning   */

header div {
    display:flex;
    justify-content: center;
}

/* Logo */

#logo {
  width: 100%;
  margin-top: -1%;
  border: 0px;
  height: 40px;
  padding: 0;
}

/*    Image sizing  */

img {
    padding:0px;
    border:0px;
    margin:0px;
}

/* Company Name Header */

#company_name {
   font-family: "candara", "sans-serif";
   color: rgb(14, 130, 45);
   text-align: center;
   font-size: 200%;
   font-style: oblique;
   height: 30px;
   margin-top: 0;
   width:auto;
}

/*    Home Page Container and text block   */

#homepage_container {
    height: 500px;
    width: 100%;
    overflow: hidden;
    position: relative;
    margin-top: -30px;
}

#homepage_textblock {
    font-size: 120%;
    font-family: "candara", "sans-serif";
    letter-spacing: 4px;
    text-align: center;
    width: 600px;
    height: 200px;
    padding-top: 5px ;
    padding-left: 5px;
    padding-right: 1px;
    background-color: rgba(10, 109, 38, 0.7);
    bottom: 120px;
    right: 400px;
    position: absolute;

        animation-name: spin;
        animation-duration: 5s;
        animation-fill-mode: forwards;
}

/*   Adds a spin animation to the text block in container  */

    @keyframes spin {
    from {transform:rotate(0deg);}
    to {transform:rotate(360deg);}
}

    /*  Styling for header in text block  */

#homepage_textblock h2 {
        width: auto;
        margin: 2%;
        color: white;
    }

    /*   Key background image on home page  */

#hero-image {
        height: 600px;
        width: 100%;
        background: url('../images/Fairway.jpeg') no-repeat center center;
        margin-bottom: 50%;
    
        /* Animates zoom effect on main home page image */
    
        animation-name: hero-zoom;
        animation-duration: 5s;
        animation-fill-mode: forwards;
    }

    /* Creates the level of zoom for hero image */

    @keyframes hero-zoom {
    from {
     transform: scale(1);
 
    }
    
     to {
         transform: scale(1.4);
     }
 }

    /*   About us main section and header  */

#about_us_main {
    display: flex;
    height: 300px;
    width: 100%;
    background-color: rgb(108, 168, 19);
    display: block;
    margin-right: auto;
    margin-left: auto;
    text-align:center;
}

#about_us_main h2 {
    margin: 0%;
    color: azure;
}

#about_us_main p {
    margin-top: 30px;
}



/*  Enquiry background Picture  */

/*#enquiries_hero {
    height: 80%;
    width: auto;
    background: url('../images/enquiries_image.jpeg') no-repeat center center;
    margin-bottom: 50%;
    object-fit: cover;
    filter: blur(8px);
} */

/*  Enquiry form container, labels and input section  */

.form_container {
    border-radius: 5px;
    background-color: rgb(20, 100, 34);
    padding: 20px;
    font-family: 'Times New Roman', "sans-serif";
    font-weight: bold;
    color:ivory;
    text-align: center;
    width: 50%;
    margin-left: 25%;
    height: 600px;
    box-sizing: border-box;
  }


.form_container label {
    display: inline-block;
    width: 100px;
    text-align:right;
  }

.form_container input[type=email]  {
    width: 50%;
    padding: 12px;
    border: 1px solid #ccc;
    border-radius: 4px;
    box-sizing: border-box;
    margin-top: 6px;
    margin-bottom: 10px;
    vertical-align:middle;
    text-align: center;
    clear: both;
    margin-left: auto;
}

.form_container input[type=text], select, textarea {
    width:50%;
    padding: 12px;
    border: 1px solid #ccc;
    border-radius: 4px;
    box-sizing: border-box;
    margin-top: 6px;
    margin-bottom: 10px;
    vertical-align: middle;
    text-align: center;
    clear: both;
    margin-left: auto;
  }
  
.form_container input[type=submit] {
    background-color: #45a049;
    color: white;
    padding: 20px 40px;
    border: none;
    border-radius: 4px;
    cursor: pointer;
    width: 30%;
    text-align: center;
    margin-left: 15%;
    margin-top: 20px;
  }
  
.form_container input[type=submit]:hover {
    background-color:lightgreen;
  }
  

 /* Popular destinations styling, headings and sections */ 

 #destinations {
    font-family: candara, sans-serif;
    font-style: oblique;
 }

 #popular {
    font-family: "candara", "sans-serif";
    color: rgb(14, 130, 45);
    text-align: center;
    font-size: 200%;
    font-style: oblique;
 }

 #destinations #portugal {

    background-image: url('../images/Course1.jpeg');
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
    width: 33%;
    overflow: hidden;
    float: left;
}

#destinations #spain {

    background-image: url('../images/Spain_course.jpeg');
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
    width: 34%;
    overflow: hidden;
    
}

#destinations #ireland {

    background-image: url('../images/Course3.jpeg');
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
    width: 33%;
    overflow: hidden;
    float: right;
    
}

#destinations div {
    color: #fafafa;
    width: 50%;
    height: 250px;
    float: left;
    padding: 30px 30px 0 10px;
    text-align: center;
    border: 2px solid white;
    box-sizing: border-box;
}

/* Footer dimensions */

footer {
    width: auto;
    height: 100px;
    margin-top: 0%;
    margin-bottom: 0%;
}

/* Social media links */

.social-links {
    text-align: center;
}

.social-links > li {
    display: inline;
}

.social-links i {
    font-size: 160%;
    margin: 1%;
    padding: 5%;
    color: rgb(14, 130, 45);
}

/* Circle shadow animation on social links */

  i:hover {
    border-radius: 50%;
    box-shadow: 0 0 50px #ccc;
  }

h3 {
    padding-bottom: 0px;
    text-align: center;
    font-family: "candara", "sans-serif";
}

/* Styling and layout for photos on gallery page */

#photos {
    clear: both;
    line-height: 0;
    column-count: 3;
    column-gap: 0;
    overflow: hidden;
    }
    
#photos > img {
        width: 100%;
    }

h4 {
    font-family: Georgia, 'Times New Roman', Times, serif;
    color: rgb(14, 130, 45);
    position: relative;
    /*top: -10px;
    left: 30px; */
    line-height: 2;
    text-align: left;
}

/* Setting paragraph styling for all pages */

p {
    text-align:center;
    color: azure;
    font-size: large;
    line-height: 2rem;
    font-family:Georgia, 'Times New Roman', "Times, serif";
}

/* Styling and positioning the review sections on about us page */


.review {
    display:flex;
    justify-content: center;
    font-family: candara, sans-serif;
    font-style: oblique;
    color:azure;
    background-color:darkseagreen;
}

.review div {
    height: 300px;
    width: auto;
    text-align: center;
    border: 2px solid white;
    box-sizing: border-box;
    font-size: large;
    margin-bottom: 2px;
    margin-left: 15px;
    margin-right: 15px;
}

/*#review {
    font-family: candara, sans-serif;
    font-style: oblique;
    color:azure;
}

#review_left {
    width: 33%;
    overflow: hidden;
    float: left;
    background-color:darkseagreen;
}

#review_centre {
    width: 34%;
    overflow: hidden;
    background-color:darkseagreen;
}

#review_right {
    height: 500px;
    width: 33%;
    overflow: hidden;
    float: right;
    background-color:darkseagreen;
}*/

footer > ul {
    margin: 0px;
    height: 150%
}

/*  Settings for elements and sections to be responsive */

@media screen and (max-width: 950px) {

    #menu {
        clear: left;
        float: left;
        margin-left: 30px;
        margin-bottom: 20px;
        line-height: 25px;
        font-size: small;
    }

    #h4 {
        position: fixed;
    }


    #photos {
        column-count: 3;
    }

    #destinations #portugal {
        width:100%;
    }

    #destinations #spain {
        width:100%;
    }

    #destinations #ireland {
        width:100%;
    }

    .review {
        flex-direction: column;
        height: auto;
    }

    #about_us_main {
        height: auto;
    }

    #about_us_main p {
        font-size: 90%;
        margin-top: 0px;
    }

    #about_us_main #h2 {
        text-align: center;
        width: auto;
        margin:0%;
    }

    #homepage_textblock {
        width:50%;
        height: auto;
        left: 90px;
        bottom: 0;
    }

    .form_container {
        width:auto;
        height: auto;

    }


}

/* for small screen sizes - 800px or smaller */
    @media screen and (max-width: 800px) {
        #photos {
            column-count: 2;
        }
        #h4 {
            position: fixed;
        }
    }

    /* for small screen sizes - 500px or smaller */
    @media screen and (max-width: 500px) {



        .form_container input[type=text], select, textarea {
            width:50%;
            margin-top: 10px;
        }

        .form_container input[type=submit] {
            width:50%;
        }

        

    }

